--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -16,7 +16,7 @@ RUN apk --update add nginx && \
 COPY nginx.conf /etc/nginx/.
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
-  && pip install --user --no-cache-dir -r requirements.txt \
+  && pip install -r requirements.txt \
   && apk del .build-dependencies
 
 
