--- a/docker/py3ews/Pipfile
+++ b/docker/py3ews/Pipfile
@@ -4,10 +4,18 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
+pytest = "==5.0.1"
+pytest-mock = "*"
+requests-mock = "*"
+pytest-asyncio = "*"
 
 [packages]
+cryptography = "*"
+cffi = "*"
+msal = "*"
 exchangelib = "*"
 chardet = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
