--- a/docker/py3ews/Dockerfile
+++ b/docker/py3ews/Dockerfile
@@ -4,14 +4,9 @@ COPY requirements.txt .
 
 RUN pip3 install --no-cache-dir --upgrade pip
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev gcc build-base wget git \
   rust cargo \
-  libffi-dev openssl-dev \
+  libffi-dev openssl-dev libxslt-dev libxml2-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
   && rm -rf /root/.cargo
-
-RUN apk --update add --no-cache libxslt-dev \
-  && apk --update add --no-cache --virtual .build-dependencies python3-dev gcc build-base wget git libffi-dev openssl-dev python3-dev libxml2-dev \
-  && pip install --no-cache-dir -r requirements.txt \
-  && apk del .build-dependencies
