added qpdf package

--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/python3:3.9.7.24076
 COPY requirements.txt .
 
 RUN apk update && apk add --no-cache ttf-dejavu  libstdc++ openjpeg-tools fontconfig &&\
-  apk add --no-cache --virtual .build-dependencies wget xz build-base cmake cairo-dev \
+  apk add --no-cache --virtual .build-dependencies wget xz build-base cmake qpdf cairo-dev \
   fontconfig-dev libjpeg-turbo-dev boost-dev openjpeg-dev cairo libjpeg freetype-dev &&\
   wget https://poppler.freedesktop.org/poppler-21.10.0.tar.xz -O /tmp/p.tar.xz && \
   tar -xvf /tmp/p.tar.xz -C /tmp && \
