--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -1,9 +1,9 @@
-FROM demisto/python3:3.9.7.24076
+FROM demisto/python3-deb:3.10.4.27798
 
 COPY requirements.txt .
 
-RUN apk update && apk add --no-cache ttf-dejavu  libstdc++ openjpeg-tools fontconfig &&\
-  apk add --no-cache --virtual .build-dependencies wget xz build-base cmake py3-pikepdf cairo-dev \
+RUN apt-get update && apt-get install -y --no-install-recommends ttf-dejavu libstdc++ openjpeg-tools fontconfig &&\
+  apt-get install -y --no-install-recommends wget xz build-base cmake py3-pikepdf cairo-dev \
   fontconfig-dev libjpeg-turbo-dev boost-dev openjpeg-dev cairo libjpeg freetype-dev &&\
   wget https://poppler.freedesktop.org/poppler-21.10.0.tar.xz -O /tmp/p.tar.xz && \
   tar -xvf /tmp/p.tar.xz -C /tmp && \
@@ -18,5 +18,5 @@ RUN apk update && apk add --no-cache ttf-dejavu  libstdc++ openjpeg-tools fontco
         .. && \
   make && \
   make install && make clean && \
-  cd $CURR_DIR && pip install -r requirements.txt && \
-  apk del .build-dependencies 
+  cd $CURR_DIR && pip install -r requirements.txt
+
