Create new debian Dockerfile

--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -2,4 +2,6 @@ FROM demisto/python3-deb:3.10.4.27798
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y --no-install-recommends poppler python3-dev make gcc g++ && \
+    pip install --no-cache-dir -r requirements.txt && \
+    apt-get purge -y --auto-remove python3-dev make gcc g++
