change poppler to poppler-utils

--- a/docker/readpdf/Dockerfile
+++ b/docker/readpdf/Dockerfile
@@ -2,6 +2,7 @@ FROM demisto/python3-deb:3.10.4.27798
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y --no-install-recommends poppler python3-dev make gcc g++ && \
+RUN apt-get update && apt-get install -y --no-install-recommends poppler-utils python3-dev make gcc g++ && \
     pip install --no-cache-dir -r requirements.txt && \
-    apt-get purge -y --auto-remove python3-dev make gcc g++
+    apt-get purge -y --auto-remove python3-dev make gcc g++ && \
+    rm -rf /var/lib/apt/lists/*
