--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -737,3 +737,7 @@ updates:
     directory: /docker/opnsense
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/glpi
+    schedule:
+     interval: daily
