--- a/docker/py3-tools/Dockerfile
+++ b/docker/py3-tools/Dockerfile
@@ -4,7 +4,7 @@ FROM demisto/python3:3.10.4.28442
 COPY requirements.txt .
 
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
 
