--- a/docker/readpdf/Pipfile
+++ b/docker/readpdf/Pipfile
@@ -6,6 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+pypdf2 = "*"
+pikepdf = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
