--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -18,9 +18,7 @@ COPY nginx.conf /etc/nginx/.
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
-  && mkdir /tldextractcache \
-  && chmod -R 777 /tldextractcache
-
+  && mkdir -m 777 /tldextractcache
 
 ENV TLDEXTRACT_CACHE="/tldextractcache"
 
