--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -3,6 +3,8 @@ FROM demisto/crypto:1.0.0.23151
 
 COPY requirements.txt .
 
+ENV TLDEXTRACT_CACHE="/home/demisto/tldextractcahce"
+
 RUN apk --update add nginx && \
   mkdir -p /run/nginx && \
   mkdir -p /var/lib/nginx/tmp/cache && \
@@ -18,9 +20,8 @@ COPY nginx.conf /etc/nginx/.
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
-  && mkdir -m 777 /tldextractcache
-
-ENV TLDEXTRACT_CACHE="/tldextractcache"
+  && mkdir $TLDEXTRACT_CACHE \
+  && chmod -R 777 $TLDEXTRACT_CACHE
 
 
 RUN tldextract --update
