--- a/docker/flask-nginx/Dockerfile
+++ b/docker/flask-nginx/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/crypto:1.0.0.23151
 
 COPY requirements.txt .
 
-ENV TLDEXTRACT_CACHE="/home/demisto/tldextractcahce"
+ENV TLDEXTRACT_CACHE="/tldextractcahce"
 
 RUN apk --update add nginx && \
   mkdir -p /run/nginx && \
@@ -20,5 +20,5 @@ COPY nginx.conf /etc/nginx/.
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies \
-  && mkdir $TLDEXTRACT_CACHE \
+  && tldextractcahce --update \
   && chmod -R 777 $TLDEXTRACT_CACHE
