--- a/docker/python3/build.conf
+++ b/docker/python3/build.conf
@@ -1,3 +1,3 @@
 # Name value properties to use while doing a build
 version=3.10.4
-platforms="linux/amd64,linux/arm64"
+platforms=linux/amd64,linux/arm64
