--- a/.github/workflows/update-internal-base-images.yml
+++ b/.github/workflows/update-internal-base-images.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
-          ssh-key: "${{ secrets.ACTION_KEY }}"
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
