--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             pipenv run pytest ironbank -v
       - run:
           name: Configure buildx builder
-          command: docker buildx create --name $(BUILDER) --use
+          command: docker buildx create --name $BUILDER --use
       - run:
           name: Build Docker Images
           command: |
