add the msgconvert tool

--- a/docker/parse-emails/Dockerfile
+++ b/docker/parse-emails/Dockerfile
@@ -20,9 +20,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   libemail-outlook-message-perl \ 
   libemail-address-perl \
 && pip3 install --no-cache-dir -r requirements.txt \
+&& GIT_SSL_NO_VERIFY=yes git clone https://github.com/mvz/email-outlook-message-perl.git \
+&& cd email-outlook-message-perl \
+&& cpan -i Module::Build \
+&& perl Build.PL \
+&& ./Build \
+&& ./Build install \
 && apt-get purge -y --auto-remove \
   python3-dev \
   make \
   gcc \
   g++ \
-&& rm -rf /var/lib/apt/lists/*
+&& rm -rf /var/lib/apt/lists/* \
+&& rm -rf mail-outlook-message-perl
