--- a/docker/xsoar-tools/Dockerfile
+++ b/docker/xsoar-tools/Dockerfile
@@ -3,7 +3,7 @@ FROM demisto/python3:3.10.4.28442
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev openssl-dev wget \
   && apk add --no-cache git  \
   && apk add --no-cache libstdc++  \
   && apk add --no-cache --upgrade grep  \
