--- a/docker/parse-emails/Dockerfile
+++ b/docker/parse-emails/Dockerfile
@@ -7,4 +7,5 @@ RUN apk --update add --no-cache libmagic
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev openssl-dev wget git \
   && pip install --no-cache-dir -r requirements.txt \
+  && pip uninstall pcodedmp \
   && apk del .build-dependencies
