--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -39,7 +39,8 @@ RUN npm ci && python3 -m pip install --no-cache-dir -r requirements.txt && rm re
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py3.txt /content/dev-requirements-py3.txt
 ADD https://raw.githubusercontent.com/demisto/content/master/dev-requirements-py2.txt /content/dev-requirements-py2.txt
 
-RUN virtualenv -p python2 venv \
+RUN python3 -m pip install --no-cache-dir -r /content/dev-requirements-py3.txt \
+    && virtualenv -p python2 venv \
     && venv/bin/pip2 install -r dev-requirements-py2.txt \
     && python3 -m venv --system-site-packages venv \
     && venv/bin/pip3 install -r dev-requirements-py3.txt -U --upgrade-strategy only-if-needed \
