--- a/docker/parse-emails/Dockerfile
+++ b/docker/parse-emails/Dockerfile
@@ -7,5 +7,5 @@ RUN apk --update add --no-cache libmagic
 
 RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base libffi-dev wget git \
   && pip install --no-cache-dir -r requirements.txt \
-  && pip list | awk -F' ' {'print $1'} | sed 1,2d | xargs -I ARGS sh -c '{ pip show ARGS | grep "License: GPL" && pip uninstall -q -y ARGS; }' && 0 \
+  && pip uninstall pcodedmp \
   && apk del .build-dependencies
