--- a/docker/content-build/Dockerfile
+++ b/docker/content-build/Dockerfile
@@ -7,7 +7,7 @@ RUN sudo apt-get update && \
   xz-utils tk-dev libffi-dev liblzma-dev python-openssl
 
 # Change virtualenv version to old version - Bug with link 2 python versions
-RUN pip uninstall -y virtualenv && pip install virtualenv==16.7.7
+RUN pip install --no-cache-dir -r requirements.txt
 
 # install gcloud see: https://cloud.google.com/sdk/docs/downloads-apt-get
 RUN sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates gnupg \
