--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 virtualenv = "==16.7.9"
+google-cloud-storage = "==2.3.0"
+google-cloud-bigquery = "==3.0.1"
+
 
 [requires]
 python_version = "3.10"
