--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -741,3 +741,7 @@ updates:
     directory: /docker/glpi
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/gdetect
+    schedule:
+     interval: daily
