feat: Add GLIMPS gdetect (#7650)
Co-authored-by: MLainer1 <93524335+MLainer1@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -742,6 +742,10 @@ updates:
     schedule:
      interval: daily
   - package-ecosystem: pip
+    directory: /docker/gdetect
+    schedule:
+     interval: daily
+  - package-ecosystem: pip
     directory: /docker/pydantic-jwt3
     schedule:
      interval: daily
