--- a/docker/duoxsiam/Pipfile
+++ b/docker/duoxsiam/Pipfile
@@ -6,7 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+pydentic = "*"
 duo-client = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.10"
