--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -745,3 +745,7 @@ updates:
     directory: /docker/pydantic-jwt3
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/duoadmin3
+    schedule:
+     interval: daily
