--- a/docker/duoadmin3/Dockerfile
+++ b/docker/duoadmin3/Dockerfile
@@ -3,6 +3,6 @@ FROM demisto/python3:3.9.6.24019
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python2-dev build-base wget \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
