--- a/docker/duoadmin3/Pipfile
+++ b/docker/duoadmin3/Pipfile
@@ -6,9 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-fastapi = "*"
-uvicorn = "*"
+pydantic = "*"
 duo-client = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
