--- a/docker/powershell-ubuntu/Dockerfile
+++ b/docker/powershell-ubuntu/Dockerfile
@@ -1,8 +1,8 @@
 # Last modified: Sun, 29 Aug 2021 16:25:44 +0000
-FROM mcr.microsoft.com/powershell:7.2-ubuntu-22.04
+FROM mcr.microsoft.com/powershell:7.2.1-ubuntu-20.04-20211215
 
 # For the `no supported WSMan client library was found` error when using Ubuntu 20+
-RUN apt autoremove && apt autoclean -y && apt update && apt-get update -y
+RUN apt-get -f install && apt-get update -y
 RUN sh -c "yes | pwsh -Command 'Install-Module -Name PSWSMan'"
 RUN pwsh -Command 'Install-WSMan'
 
