--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -7,7 +7,8 @@ verify_ssl = true
 
 [packages]
 poetry = "*"
-google-cloud-bigquery = "*"
+google-cloud-storage = "==1.29.0"
+google-cloud-bigquery = "==1.26.1"
 
 [requires]
 python_version = "3.10"
