--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -50,3 +50,4 @@ RUN apt-get update && apt-get -t bullseye-backports install -y --no-install-reco
   curl \
   unzip \
 && rm -rf /var/lib/apt/lists/*
+&& ENV DISPLAY ‘:1’
