--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 poetry = "*"
+google-cloud-bigquery = "*"
+google-cloud-bigquery-storage = "*"
+
 
 [requires]
 python_version = "3.10"
