--- a/docker/google-api/Pipfile
+++ b/docker/google-api/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 google-cloud-storage = "*"
 google-api-python-client = "*"
-oauth2client = "*"
+oauth2client = "==3.0.0"
 typing = "*"
 
 [requires]
