--- a/docker/intezer/build.conf
+++ b/docker/intezer/build.conf
@@ -1,3 +1,3 @@
 version=1.0.0
 deprecated=true
-deprecated_reason="docker image was merged to py3-tools"
+deprecated_reason=docker image was merged to py3-tools
