--- a/docker/stix2/build.conf
+++ b/docker/stix2/build.conf
@@ -1,4 +1,4 @@
 version=1.0.0
 ironbank=true
 deprecated=true
-deprecated_reason="docker image was merged to py3-tools"
+deprecated_reason=docker image was merged to py3-tools
