--- a/docker/content-build/Dockerfile
+++ b/docker/content-build/Dockerfile
@@ -2,7 +2,7 @@ FROM cimg/python:3.10.1-node
 
 RUN sudo apt-get update && \
   sudo apt-get install -y --no-install-recommends libxml2-dev libxslt1-dev zlib1g-dev jq \
-  make build-essential libssl-dev libbz2-dev \
+  make cowsay build-essential libssl-dev libbz2-dev \
   libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev \
   xz-utils tk-dev libffi-dev liblzma-dev python-openssl
 
