--- a/docker/ldap/build.conf
+++ b/docker/ldap/build.conf
@@ -1,4 +1,4 @@
 version=1.0.0
 ironbank=true
 deprecated=true
-deprecated_reason=docker image was merged to py3-tools
+deprecated_reason=Use the demisto/py3-tools docker image instead.
