--- a/docker/gitlab-content-ci/Pipfile
+++ b/docker/gitlab-content-ci/Pipfile
@@ -46,6 +46,7 @@ paramiko = "==2.6.0"
 pyminizip = "===0.2.4"
 google-cloud-storage = "==1.29.0"
 google-cloud-bigquery = "==1.26.1"
+google-cloud-compute = "*"
 prettytable = "==0.7.2"
 boto3 = "==1.16.39"
 mock-open = "==1.4.0"
