--- a/docker/test-sdk-fix/Dockerfile
+++ b/docker/test-sdk-fix/Dockerfile
@@ -3,6 +3,6 @@ FROM demisto/python3:3.10.4.29342
 
 COPY requirements.txt .
 
-RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git \
+RUN apk --update add --no-cache --virtual .build-dependencies python3-dev build-base wget git libffi-dev \
   && pip install --no-cache-dir -r requirements.txt \
   && apk del .build-dependencies
