--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -753,3 +753,7 @@ updates:
     directory: /docker/duoadmin3
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/pycountry
+    schedule:
+     interval: daily
