chrome: add env variable for chrome exe path

--- a/docker/chromium/Dockerfile
+++ b/docker/chromium/Dockerfile
@@ -49,3 +49,5 @@ RUN apt-get update && apt-get -t bullseye-backports install -y --no-install-reco
   curl \
   unzip \
 && rm -rf /var/lib/apt/lists/*
+
+ENV CHROME_EXE="/opt/google/chrome/chrome"
