--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -9,8 +9,8 @@ RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
 RUN apt-get update  && apt-get upgrade -y \
     && apt-get install -y curl jq unzip openssh-client gcc libffi-dev libssl-dev git zip cowsay netcat wget python2 python3-pip software-properties-common \
-    # Install requirements
-    && pip install --no-cache-dir -r requirements.txt \
+    # Install poetry
+    && curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python - \
     # Installing nvm, npm and node.js
     && curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash \
     && . $NVM_DIR/nvm.sh \
@@ -27,6 +27,7 @@ RUN apt-get update  && apt-get upgrade -y \
     && gcloud --version \
     && gsutil --version \
     && docker --version \
+    && poetry --version \
     && ! kubectl version --output yaml \
     # Installing goenv
     && git clone https://github.com/syndbg/goenv.git ~/.goenv \
