--- a/docker/ml/Pipfile
+++ b/docker/ml/Pipfile
@@ -18,6 +18,9 @@ dill = "*"
 catboost = "*"
 eli5 = "*"
 langdetect = "*"
+onnx = "==1.9.0"
+onnxruntime = "==1.8.0"
+transformers = "*"
 
 [dev-packages]
 
