--- a/docker/xsoar-tools/Pipfile
+++ b/docker/xsoar-tools/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-demisto-sdk = {git = "https://github.com/demisto/demisto-sdk.git", editable = false, ref = "ds-154-fix"}
+demisto-sdk = {git = "https://github.com/demisto/demisto-sdk.git", editable = false, ref = "629816782206f791dde443dad5e64fb4bb1d9c8d"}
 demisto-py = "*"
 
 [dev-packages]
