--- a/docker/sonic_slackv3/Dockerfile
+++ b/docker/sonic_slackv3/Dockerfile
@@ -3,6 +3,11 @@ FROM condaforge/miniforge-pypy3
 
 COPY requirements.txt .
 
-RUN apt-get update \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  gcc \
+  libffi-dev \
 && pip install --no-cache-dir -r requirements.txt \
+&& apt-get purge -y --auto-remove \
+  gcc \
+  libffi-dev \
 && rm -rf /var/lib/apt/lists/*
