--- a/docker/sonic_slackv3/Pipfile
+++ b/docker/sonic_slackv3/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-slack-sdk = {extras = ["optional"], version = "*"}
+slack-sdk = "*"
 aiohttp = "*"
 
 [dev-packages]
