Add cargo -> Rust

--- a/docker/sonic_slackv3/Dockerfile
+++ b/docker/sonic_slackv3/Dockerfile
@@ -6,8 +6,15 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y --no-install-recommends \
   gcc \
   libffi-dev \
+  curl \
 && pip install --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove \
   gcc \
   libffi-dev \
+  curl\
 && rm -rf /var/lib/apt/lists/*
+
+# Get Rust
+RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
+
+RUN echo 'source $HOME/.cargo/env' >> $HOME/.bashrc
