--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -761,3 +761,7 @@ updates:
     directory: /pdf-to-xlsx
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /docker/pdf-to-xlsx
+    schedule:
+     interval: daily
