--- a/docker/content-build/Dockerfile
+++ b/docker/content-build/Dockerfile
@@ -6,13 +6,11 @@ RUN sudo apt-get update && \
   libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev \
   xz-utils tk-dev libffi-dev liblzma-dev python-openssl
 
-# Change virtualenv version to old version - Bug with link 2 python versions
-RUN pip uninstall -y virtualenv && pip install virtualenv==16.7.7
-
 # install gcloud see: https://cloud.google.com/sdk/docs/downloads-apt-get
 RUN sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates gnupg \
   && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
   && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - \
   && sudo apt-get update && sudo apt-get install google-cloud-sdk \
   && gcloud --version \
-  && gsutil --version  
+  && gsutil --version  \
+  && poetry --version
