--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -757,3 +757,7 @@ updates:
     directory: /docker/exodusintelligence
     schedule:
      interval: daily
+  - package-ecosystem: pip
+    directory: /xsoar-tools-hf
+    schedule:
+     interval: daily
