--- a/docker/xsoar-tools/Pipfile
+++ b/docker/xsoar-tools/Pipfile
@@ -4,11 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-demisto-sdk = {git = "https://github.com/demisto/demisto-sdk.git", editable = true, ref = "629816782206f791dde443dad5e64fb4bb1d9c8d"}
+demisto-sdk = "*"
 demisto-py = "*"
-markupsafe = "==2.0.1"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
