--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -758,6 +758,6 @@ updates:
     schedule:
      interval: daily
   - package-ecosystem: pip
-    directory: /xsoar-tools-hf
+    directory: /docker/xsoar-tools-hf
     schedule:
      interval: daily
