--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pyyaml = "*"
 regex = "*"
 python-dateutil = "*"
 gitpython = "*"
+armorblox = {git = "https://github.com/armorblox/armorblox-python-sdk"}
 
 [dev-packages]
 pytest = "*"
